# 6502-emulator

./: CMakeLists.txt  README.md
6502/6502Lib/: CMakeLists.txt
6502/6502Lib/src/: main.cpp
scripts/: run.sh
utils/: find_endianness.c
